--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 packaging==25.0
 pillow==12.0.0
+psycopg2==2.9.11
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.3
